IDEADEV-36013: introduce variable could use statistics to present most desirable type